--- a/proxy/index.html
+++ b/proxy/index.html
@@ -1,5 +1,8 @@
 <html>
     <body>
-        Hello from Octopus_MOOOOD!
+    <br>
+    This is the index of the proxy server <br>
+    you should not read this, since request to this url should be redirected to service_A
+
     </body>
 </html>
