--- a/service_a/index.html
+++ b/service_a/index.html
@@ -1,5 +1,7 @@
 <html>
     <body style="background-color: brown">
         service A
+    <br>
+    you can come here both by 0.0.0.0.8080 and 0.0.0.0:8080/api_a
     </body>
 </html>
