--- a/service_b/index.html
+++ b/service_b/index.html
@@ -1,5 +1,7 @@
 <html>
     <body style="background-color: brown">
-        Service B
+        service B
+    <br>
+    you can come here by 0.0.0.0:8080/api_b
     </body>
 </html>
