add auto-SSL & https support

--- a/service_a/index.html
+++ b/service_a/index.html
@@ -1,7 +1,6 @@
 <html>
-    <body style="background-color: brown">
-        service A
+    <body style="  background-color: brown; margin-top: 50vh; margin-left: 40vw;font-size: 20px;">
+    Service A
     <br>
-    you can come here both by 0.0.0.0.8080 and 0.0.0.0:8080/api_a
     </body>
 </html>
