--- a/service_b/index.html
+++ b/service_b/index.html
@@ -1,7 +1,5 @@
 <html>
-    <body style="background-color: brown">
-        service B
-    <br>
-    you can come here by 0.0.0.0:8080/api_b
+    <body style="  background-color: brown; margin-top: 50vh; margin-left: 40vw;font-size: 20px;">
+        Service B
     </body>
 </html>
